@@ -1,5 +1,6 @@
 30/04/2010
 - bugfix when comparing timestamps in sysplugins/smarty_internal_config.php
+- work around of a substr_compare bug in older PHP5 versions
 
 =====  RC1 =====
 
